[Qt][Texmap] Falling leaves demo missing clipping. https://bugs.webkit.org/show_bug.cgi?id=88704

The bug originated from begining native painting mode of QPainter after enabling
scissor test, because begining native painting mode disables scissor test.

Covered by existing compositing tests.

Patch by Huang Dongsung <luxtella@company100.net> on 2012-06-12
Reviewed by Noam Rosenthal.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::beginPainting):

Canonical link: https://commits.webkit.org/106699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120066 268f45cc-cd09-0410-ab3c-d52691b4dbfc